--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   flutter_easyloading: ^3.0.5
   http: ^1.1.0
+  sp_util: ^2.0.3
 
 dev_dependencies:
   flutter_lints: ^2.0.0
