--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   flutter_easyloading: ^3.0.5
   http: ^1.1.0
   flutter_secure_storage: ^8.0.0
+  firebase_core: ^2.14.0
+  firebase_messaging: ^14.6.4
 
 dev_dependencies:
   flutter_lints: ^2.0.0
